data/derived/comb/progs/unify/prog5024.ml.out
Characters 264-268:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type 'a list * 'b list
       but an expression was expected of type (int * int) list
